python L6 development exercises

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,15 @@ L4/__pycache__/L1E82.cpython-36.pyc
 L4/.idea/misc.xml
 L4/.idea/workspace.xml___jb_tmp___
 L4/E9/__pycache__/L1E9.cpython-36.pyc
+L6/lab2_borrador.txt
+L6/.idea/encodings.xml
+L6/.idea/L6.iml
+L6/.idea/misc.xml
+L6/.idea/modules.xml
+L6/.idea/vcs.xml
+L6/.idea/workspace.xml
+L6/.idea/vcs.xml
+L6/ejemplo.py
+L6/StrtoInt.py
+L6/heart-disease-uci.zip
+L6/ClassExmpl.py
