--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,7 @@ L6/ejemplo.py
 L6/StrtoInt.py
 L6/heart-disease-uci.zip
 L6/ClassExmpl.py
+L6/[]
+L6/__pycache__/SortData.cpython-36.pyc
+L6/[]
+L6/__pycache__/SortData.cpython-36.pyc
