--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,21 @@ L6/[]
 L6/__pycache__/SortData.cpython-36.pyc
 L6/ejemplo2.py
 L6/ejemplo2.py
+ignorar/ClassExmpl.py
+ignorar/ejemplo.py
+ignorar/ejemplo2.py
+ignorar/heapout.csv
+ignorar/heapSortExample.py
+ignorar/heart-disease-uci.zip
+ignorar/outMergeSort.csv
+ignorar/quickSortExample.py
+ignorar/StrtoInt.py
+L6/ignorar/ClassExmpl.py
+L6/ignorar/ejemplo.py
+L6/ignorar/ejemplo2.py
+L6/ignorar/heapout.csv
+L6/ignorar/heapSortExample.py
+L6/ignorar/heart-disease-uci.zip
+L6/ignorar/outMergeSort.csv
+L6/ignorar/quickSortExample.py
+L6/ignorar/StrtoInt.py
