--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ L6/ignorar/heart-disease-uci.zip
 L6/ignorar/outMergeSort.csv
 L6/ignorar/quickSortExample.py
 L6/ignorar/StrtoInt.py
+L8/.idea/encodings.xml
+L8/.idea/L8.iml
+L8/.idea/misc.xml
+L8/.idea/modules.xml
+L8/.idea/vcs.xml
+L8/.idea/workspace.xml
+L8/__pycache__/ticTacToe2.cpython-36.pyc
